# docs/swagger.json
@@ -4,7 +4,127 @@
         "contact": {}
     },
     "paths": {
-        "/karyawan-training/delete": {
+        "/v1/file/delete/{filename}": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Delete Uploaded File",
+                "operationId": "DeleteFile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "File Name",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/file/show/{filename}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "*/*"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Show Uploaded File",
+                "operationId": "ShowFile",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "File Name",
+                        "name": "filename",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "file"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/file/upload": {
+            "post": {
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "file"
+                ],
+                "summary": "Upload File",
+                "operationId": "UploadFile",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "File Upload Request",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.ApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/idstar/karyawan-training/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -50,7 +170,7 @@
                 }
             }
         },
-        "/karyawan-training/list": {
+        "/v1/idstar/karyawan-training/list": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -111,7 +231,7 @@
                 }
             }
         },
-        "/karyawan-training/save": {
+        "/v1/idstar/karyawan-training/save": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -157,7 +277,7 @@
                 }
             }
         },
-        "/karyawan-training/update": {
+        "/v1/idstar/karyawan-training/update": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -209,7 +329,7 @@
                 }
             }
         },
-        "/karyawan-training/{id}": {
+        "/v1/idstar/karyawan-training/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -259,7 +379,7 @@
                 }
             }
         },
-        "/karyawan/delete": {
+        "/v1/idstar/karyawan/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -305,7 +425,7 @@
                 }
             }
         },
-        "/karyawan/list": {
+        "/v1/idstar/karyawan/list": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -366,7 +486,7 @@
                 }
             }
         },
-        "/karyawan/save": {
+        "/v1/idstar/karyawan/save": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -412,7 +532,7 @@
                 }
             }
         },
-        "/karyawan/update": {
+        "/v1/idstar/karyawan/update": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -464,7 +584,7 @@
                 }
             }
         },
-        "/karyawan/{id}": {
+        "/v1/idstar/karyawan/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -514,7 +634,7 @@
                 }
             }
         },
-        "/rekening/delete": {
+        "/v1/idstar/rekening/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -560,7 +680,7 @@
                 }
             }
         },
-        "/rekening/list": {
+        "/v1/idstar/rekening/list": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -621,7 +741,7 @@
                 }
             }
         },
-        "/rekening/save": {
+        "/v1/idstar/rekening/save": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -667,7 +787,7 @@
                 }
             }
         },
-        "/rekening/update": {
+        "/v1/idstar/rekening/update": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -719,7 +839,7 @@
                 }
             }
         },
-        "/rekening/{id}": {
+        "/v1/idstar/rekening/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -769,7 +889,7 @@
                 }
             }
         },
-        "/training/delete": {
+        "/v1/idstar/training/delete": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -815,7 +935,7 @@
                 }
             }
         },
-        "/training/list": {
+        "/v1/idstar/training/list": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -876,7 +996,7 @@
                 }
             }
         },
-        "/training/save": {
+        "/v1/idstar/training/save": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -922,7 +1042,7 @@
                 }
             }
         },
-        "/training/update": {
+        "/v1/idstar/training/update": {
             "put": {
                 "consumes": [
                     "application/json"
@@ -974,7 +1094,7 @@
                 }
             }
         },
-        "/training/{id}": {
+        "/v1/idstar/training/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
